@@ -1,3 +1,9 @@
+2005-07-11  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/20563
+	* parser.c (cp_parser_label_declaration): Deal with invalid/missing
+	identifiers.
+
 2005-07-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* call.c (build_over_call): Pass in named argument list to
